MPD_sima v0.16.2.dev0

 * Add randomness in Tags plugin artist selection
 * Fixed issue with un-tagged titles (closes #40)
 * Fixed "artist with quotes not found" (closes #41)
 * Fixed bad pid in Uniq core plugin (closes #32)

 -- kaliko <kaliko@azylum.org>  UNRELEASED

MPD_sima v0.16.1

 * tags plugin: Add album queue mode
 * tags plugin: Ensure metadata used in filter are enabled
 so that MPD exposes them (closes #38)

 -- kaliko <kaliko@azylum.org>  Sat, 09 Jan 2021 12:28:17 +0100

MPD_sima v0.16.0

 * New offline autoqueue plugin based on file tags only
 * Expose a new executable "test-tags-config"
 * Update vinstall.py (closes #34)
 * Fixed bug when http client fetches a corrupted cached entry (closes #35)
 * Need at least python 3.6

 -- kaliko <kaliko@azylum.org>  Tue, 15 Dec 2020 16:17:05 +0100

MPD_sima v0.16.0.dev0

 * Major MPD client refactoring
 * Refactored random plugin
 * Fixed bug in MPD client reconnection

 -- kaliko <kaliko@azylum.org>  Sat, 16 May 2020 14:49:04 +0200

MPD_sima v0.15.3

 * Improve HTTP client (use persistent connection)
 * Fixed a serious bug in PlayerClient().search_albums()
   "search_albums" method was ignoring some albums when Artist object had
   aliases.

-- kaliko jack <kaliko@azylum.org> Sun, 03 May 2020 16:30:36 +0200

MPD_sima v0.15.2

 * Fixed sqlite sqlite3.OperationalError VACUUM Error
 cf. https://bugs.python.org/issue28518
 * Add option to queue a chosen number of tracks from an album (closes #28)
 * Add option to shuffle tracks in album mode (Thanks Sacha)

-- kaliko jack <kaliko@azylum.org> Thu, 14 Nov 2019 17:41:22 +0100

MPD_sima v0.15.1

 * Fixed mopidy compatibility implementation

-- kaliko jack <kaliko@azylum.org> Tue, 19 Mar 2019 15:14:48 +0100

MPD_sima v0.15.0

 * Remove EchoNest support (Closes #10)
 * Enhanced queuing behavior in random mode (Closes #16)
 * Add option to prevent single & repeat mode to disable queuing (Closes #19)
 * Honor MPC password/host format on command line option 'host'