@@ -4,6 +4,7 @@ MPD_sima v0.16.2.dev0
  * Fixed issue with un-tagged titles (closes #40)
  * Fixed "artist with quotes not found" (closes #41)
  * Fixed bad pid in Uniq core plugin (closes #32)
+ * Use duration instead of time in Track objects (closes #37)
 
  -- kaliko <kaliko@azylum.org>  UNRELEASED
 
